# libNeuralFoil

./: .gitignore  CMakeLists.txt  Config.cmake.in  Doxyfile.in  LICENSE.txt  README.md
example/: CMakeLists.txt  lnfexample.cpp
include/: neuralfoil.h
src/: CMakeLists.txt  airfoilnormalizer.cpp  kulfancst.cpp  matsolve.cpp  matsolve.h  neuralfoil.cpp
test/: CMakeLists.txt  neuralfoil_public.h  neuralfoil_test.cpp  neuralfoil_test.h  test.cpp  test_cst.cpp  test_cst.h  test_helpers.cpp  test_helpers.h  test_neuralfoil.cpp  test_neuralfoil.h
